k8s/frontend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contacts-frontend
  namespace: contacts-app
spec:
  replicas: 2  # Changé de 1 à 2
  selector:
    matchLabels:
      app: contacts-frontend
  template:
    metadata:
      labels:
        app: contacts-frontend
    spec:
      containers:
      - name: contacts-frontend
        image: feridsaad/contacts-frontend:1.1
        ports:
        - containerPort: 80  # Changé de 8081 à 80
          name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
