k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-frontend-service
  namespace: contacts-app
spec:
  selector:
    app: contacts-frontend
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80  # Changé de 8081 à 80
    nodePort: 30082  # Changé de 30081 à 30080
    name: http
