k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts-mysql-service
  namespace: contacts-app
spec:
  selector:
    app: contacts-mysql
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
    name: mysql
