k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1  # Correction de la casse
kind: Ingress
metadata:
  name: contacts-frontend-ingress
  namespace: contacts-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: contacts.local  # Ajoutez cette ligne dans /etc/hosts sur votre poste
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: contacts-frontend-service
            port:
              number: 80
